# sre-sentinel

./: .env-example  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  docker-compose.yml  pyproject.toml
dashboard/: .env-example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AIInsights.tsx  ContainerStatus.tsx  LogViewer.tsx  MetricsChart.tsx
dashboard/src/hooks/: useWebSocket.ts
demo-app/: server.js
mcp-servers/: build-servers.sh  catalog.json  catalog.yaml
mcp-servers/config-patcher/: index.js  package-lock.json  package.json
mcp-servers/docker-control/: Dockerfile  index.js  package-lock.json  package.json
scripts/: break-service.sh  setup.sh
src/: README.md  __init__.py  cerebras_client.py  event_bus.py  llama_analyzer.py  main.py  mcp_orchestrator.py  monitor.py  openrouter_client.py  redis_event_bus.py  requirements.txt  sentinel_types.py  websocket_server.py
src/ai/: __init__.py  cerebras_client.py  llama_analyzer.py
src/api/: __init__.py  websocket_server.py
src/core/: __init__.py  monitor.py  orchestrator.py
src/infrastructure/: __init__.py  redis_event_bus.py
src/models/: __init__.py  sentinel_types.py
src/utils/: __init__.py  api_key_detector.py
